It is now possible to delete a chat and a group
Client:
	ChatMenu: added method deleteGroup() - delete chat or group.
	Controller:
		-added methods deleteGroup(), deleteChat();
		-added DELETE_GROUP and DELETE_CHAT response processing.
	UIClient:
		-added method deleteGroup() - delete chat or group;
		-added a contex menu for each chat in the chat menu.

Server:
	ClientHandler: added DELETE_GROUP and DELETE_CHAT request processing.

Shared:
	Group: added method deleteMember().
	RequestResponse: added DELETE_GROUP, DELETE_CHAT, DELETE_MEMBER.
	User:
		-added method deleteGroup();
		-HashMap groups -> ConcurrentHashMap groups.